[package]
name = "slideshow-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
zip = { version = "0.6.2", features = ["deflate"], default-features = false }
chrono = { version = "0.4", features = ["clock"], default-features = false }
console_error_panic_hook = { version = "0.1.7" }
wee_alloc = { version = "0.4.5", optional = false }
wasm-bindgen = { version = "0.2.83" }
